--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
   "name": "minecraft-bot-rotation",
-  "version": "3.0.0",
+  "version": "1.0.0",
   "description": "Fighter and Herobrine bot with night sleep and automatic rotation",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "node bot.js --debug"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "mineflayer": "^4.15.1",
-    "mineflayer-pathfinder": "^2.4.1",
-    "mineflayer-collectblock": "^2.3.0",
-    "mineflayer-auto-eat": "^3.0.2",
-    "mineflayer-armor-manager": "^2.5.0",
-    "vec3": "^0.1.8"
+    "mineflayer": "^4.15.1"
   },
   "keywords": [
     "minecraft",
     "bot",
     "mineflayer",
-    "aternos",
-    "fighter",
-    "herobrine",
-    "rotation"
+    "aternos"
   ],
   "author": "Albin",
   "license": "MIT"
